--- a/drink.html
+++ b/drink.html
@@ -48,10 +48,10 @@
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
-		    <a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
-		    <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
+					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
+					<a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
-		    <a href="carrito.html" id="cart-icon" class="nav-item nav-link" style="color:#964B00"><i class="fas fa-shopping-cart"></i></a>
+                    <a href="carrito.html" id="cart-icon" class="nav-item nav-link" style="color:#964B00"><i class="fas fa-shopping-cart"></i></a>
                 </div>
             </div>
         </nav>
@@ -82,91 +82,74 @@
                 <h1 class="display-4">Variados</h1>
             </div>
             <div class="row">
-                <div class="col-lg-6 mb-5">
-                    <div class="row align-items-center">
-                        <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/drinkE.png" alt="">
-                        </div>
-                        <div class="col-sm-7">
-                            <h4><i class="fa fa-truck service-icon"></i>Energix - Drink De Fresa</h4>
-							<p>Revitaliza tu día con el refrescante sabor y la energía natural de nuestra bebida Enrgix de fresa. ¡Una explosión de vitalidad en cada sorbo</p>
-							<p>500 ml.</p>
-							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/11.00</p>
-                        </div>
-                        <div class="mt-3"style ="margin:auto;" >
-                            <div class="input-group">
-                                <input type="number" class="form-control" placeholder="Cantidad">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-5">
-                    <div class="row align-items-center">
-                        <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/drinkE1.png" alt="">
-                        </div>
-                        <div class="col-sm-7">
-                            <h4><i class="fa fa-coffee service-icon"></i>Energix - Drink De Naranja </h4>
-							<p>Despierta tus sentidos con la chispeante frescura cítrica de Enrgix, ¡el impulso de energía en cada gota!.</p>
-							<p>500 ml.</p>
-							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/11.00</p>
-                        </div>
-                        <div class="mt-3"style ="margin:auto;" >
-                            <div class="input-group">
-                                <input type="number" class="form-control" placeholder="Cantidad">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 mb-5">
-                    <div class="row align-items-center">
-                        <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/drinkE2.png" alt="">
-                        </div>
-                        <div class="col-sm-7">
-                            <h4><i class="fa fa-award service-icon"></i>Energix - Drink De Limon </h4>
-							<p>Refresca tu día con la chispeante vitalidad cítrica de Enrgix Limón, tu impulso de energía en cada sorbo.</p>
-							<p>500 ml..</p>
-							<p style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/11.00</p>
-                        </div>
-                    </div>
-                                            <div class="mt-3"style ="margin:auto;" >
-                            <div class="input-group">
-                                <input type="number" class="form-control" placeholder="Cantidad">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
-                                </div>
-                            </div>
-                        </div>
-                </div>
-                <!--
-                <div class="col-lg-6 mb-5">
-                    <div class="row align-items-center">
-                        <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/mielC.png" alt="">
-                        </div>
-                        <div class="col-sm-7">
-                            <h4><i class="fa fa-table service-icon"></i>Bebida De  </h4>
-                            <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo. Guberg sea et et lorem dolor sed est sit
-                                invidunt, dolore tempor diam ipsum takima erat tempor</p>
-                        </div>
-                                                <div class="mt-3"style ="margin:auto;" >
-                            <div class="input-group">
-                                <input type="number" class="form-control" placeholder="Cantidad">
-                                <div class="input-group-append">
-                                    <button class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i> Comprar</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
+    <!-- Energix - Drink De Fresa -->
+    <div class="col-lg-6 mb-5 product-container">
+        <div class="row align-items-center">
+            <div class="col-sm-5">
+                <img class="img-fluid mb-3 mb-sm-0 product-image" src="img/drinkE.png" alt="Energix - Drink De Fresa">
             </div>
+            <div class="col-sm-7">
+                <h4 class="product-name"><i class="fa fa-truck service-icon"></i>Energix - Drink De Fresa</h4>
+                <p>Revitaliza tu día con el refrescante sabor y la energía natural de nuestra bebida Enrgix de fresa. ¡Una explosión de vitalidad en cada sorbo!</p>
+                <p>500 ml.</p>
+                <p class="product-price" style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/11.00</p>
+            </div>
+            <div class="mt-3" style="margin:auto;">
+                <div class="input-group">
+                    <input type="number" class="form-control product-quantity" placeholder="Cantidad" min="1" step="1">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button" onclick="handleAgregarAlCarrito('Energix - Drink De Fresa', 'img/drinkE.png', 11.00, this)"><i class="fas fa-shopping-cart"></i>Agregar al carrito</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Energix - Drink De Naranja -->
+    <div class="col-lg-6 mb-5 product-container">
+        <div class="row align-items-center">
+            <div class="col-sm-5">
+                <img class="img-fluid mb-3 mb-sm-0 product-image" src="img/drinkE1.png" alt="Energix - Drink De Naranja">
+            </div>
+            <div class="col-sm-7">
+                <h4 class="product-name"><i class="fa fa-coffee service-icon"></i>Energix - Drink De Naranja</h4>
+                <p>Despierta tus sentidos con la chispeante frescura cítrica de Enrgix, ¡el impulso de energía en cada gota!.</p>
+                <p>500 ml.</p>
+                <p class="product-price" style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/11.00</p>
+            </div>
+            <div class="mt-3" style="margin:auto;">
+                <div class="input-group">
+                    <input type="number" class="form-control product-quantity" placeholder="Cantidad" min="1" step="1">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button" onclick="handleAgregarAlCarrito('Energix - Drink De Naranja', 'img/drinkE1.png', 11.00, this)"><i class="fas fa-shopping-cart"></i>Agregar al carrito</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Energix - Drink De Limon -->
+    <div class="col-lg-6 mb-5 product-container">
+        <div class="row align-items-center">
+            <div class="col-sm-5">
+                <img class="img-fluid mb-3 mb-sm-0 product-image" src="img/drinkE2.png" alt="Energix - Drink De Limon">
+            </div>
+            <div class="col-sm-7">
+                <h4 class="product-name"><i class="fa fa-award service-icon"></i>Energix - Drink De Limon</h4>
+                <p>Refresca tu día con la chispeante vitalidad cítrica de Enrgix Limón, tu impulso de energía en cada sorbo.</p>
+                <p>500 ml.</p>
+                <p class="product-price" style="font-weight: bold; color: black; font-family: 'Comic Sans MS', cursive; text-align: center;">s/11.00</p>
+            </div>
+            <div class="mt-3" style="margin:auto;">
+                <div class="input-group">
+                    <input type="number" class="form-control product-quantity" placeholder="Cantidad" min="1" step="1">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button" onclick="handleAgregarAlCarrito('Energix - Drink De Limon', 'img/drinkE2.png', 11.00, this)"><i class="fas fa-shopping-cart"></i>Agregar al carrito</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
         </div>
     </div>
     <!-- Service End -->
@@ -240,6 +223,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
