--- a/service.html
+++ b/service.html
@@ -49,10 +49,9 @@
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
                     <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
-		    <a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
+					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
                     <a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
-		    <a href="carrito.html" id="cart-icon" class="nav-item nav-link" style="color:#964B00"><i class="fas fa-shopping-cart"></i></a>
                 </div>
             </div>
         </nav>
@@ -73,7 +72,6 @@
     </div>
     <!-- Page Header End -->
 
-
     <!-- Service Start -->
     <div class="container-fluid pt-5">
         <div class="container">
@@ -81,77 +79,86 @@
                 <h4 class="text-primary text-uppercase" style="letter-spacing: 5px;">Catalogo</h4>
                 <h1 class="display-4">Variados</h1>
             </div>
-             <div class="row">
+            <div class="row">
                 <div class="col-lg-6 mb-5">
-                    <div class="row align-items-center">
-                        <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/carameloE.png" alt="">
+                    <div class="card">
+                        <div class="row align-items-center">
+                            <div class="col-sm-5">
+                                <img class="card-img-top img-fluid" src="img/carameloE.png" alt="">
+                            </div>
+                            <div class="card-body col-sm-7">
+                                <h4 class="card-title">
+                                    <a href="caramelo.html" style="text-decoration: none; color: inherit;">
+                                        <i class="fa fa-truck service-icon"></i>Energix - Candy
+                                    </a>
+                                </h4>
+                                <p class="card-text">Experimenta una explosión de energía y sabor en cada bocado. Nuestros caramelos están diseñados para revivir tus sentidos y proporcionarte la vitalidad que necesitas.<a href="caramelo.html">VER MÁS...</a></p>
+                            </div>
                         </div>
-                        <div class="col-sm-7">
-                            <h4>
-                                <a href="caramelo.html" style="text-decoration: none; color: inherit;">
-                                    <i class="fa fa-truck service-icon"></i>Energix - Candy
-                                </a>
-                            </h4>
-
-                            <p class="m-0"> Experimenta una explosión de energía y sabor en cada bocado. Nuestros caramelos están diseñados para revivir tus sentidos y proporcionarte la vitalidad que necesitas. Cada dulce es una mezcla perfecta de sabores intensos y un impulso de energía natural</p>
-                        </div>
-
                     </div>
                 </div>
-                <div class="col-lg-6 mb-5">
-                    <div class="row align-items-center">
-                        <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/barraE.png" alt="">
-                        </div>
-                        <div class="col-sm-7">
-                            <h4>
-                                <a href="bar.html" style="text-decoration: none; color: inherit;">
-                                    <i class="fa fa-truck service-icon"></i>Energix - Bar
-                                </a>
-                            </h4>
-                            <p class="m-0">Prueba una exquisita combinación de sabores con estas barras energéticas que te ayudarán a recargar tu energía! Son ideales para revitalizarte en momentos de baja energía.</p>
-                        </div>
 
+                <!-- For Energix - Bar -->
+                <div class="col-lg-6 mb-5">
+                    <div class="card">
+                        <div class="row align-items-center">
+                            <div class="col-sm-5">
+                                <img class="card-img-top img-fluid" src="img/barraE.png" alt="">
+                            </div>
+                            <div class="card-body col-sm-7">
+                                <h4 class="card-title">
+                                    <a href="bar.html" style="text-decoration: none; color: inherit;">
+                                        <i class="fa fa-truck service-icon"></i>Energix - Bar
+                                    </a>
+                                </h4>
+                                <p class="card-text">Prueba una exquisita combinación de sabores con estas barras energéticas que te ayudarán a recargar tu energía! Son ideales para revitalizarte en momentos de baja energía. <a href="bar.html">VER MÁS...</a></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+                <!-- For Energix - Drink -->
                 <div class="col-lg-6 mb-5">
-                    <div class="row align-items-center">
-                        <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/drinkE.png" alt="">
-                        </div>
-                        <div class="col-sm-7">
-                            <h4>
-                                <a href="drink.html" style="text-decoration: none; color: inherit;">
-                                    <i class="fa fa-truck service-icon"></i>Energix - Drink
-                                </a>
-                            </h4>
-                            <p class="m-0">Descubre una exquisita sensación de sabores nutricionales y energéticos que te brinda nuestra bebida. Las ventajas y beneficios que  te brindarán te dejará sorprendido y con muchas energías para tus actividades. </p>
+                    <div class="card">
+                        <div class="row align-items-center">
+                            <div class="col-sm-5">
+                                <img class="card-img-top img-fluid" src="img/drinkE.png" alt="">
+                            </div>
+                            <div class="card-body col-sm-7">
+                                <h4 class="card-title">
+                                    <a href="drink.html" style="text-decoration: none; color: inherit;">
+                                        <i class="fa fa-truck service-icon"></i>Energix - Drink
+                                    </a>
+                                </h4>
+                                <p class="card-text">Descubre la rica sensación de nuestra bebida llena de sabores y energía. Sus beneficios te sorprenderán y te darán un impulso revitalizante para tu día.<br><a href="drink.html">VER MÁS...</a></p>
+                            </div>
                         </div>
                     </div>
-
                 </div>
-                <div class="col-lg-6 mb-5">
-                    <div class="row align-items-center">
-                        <div class="col-sm-5">
-                            <img class="img-fluid mb-3 mb-sm-0" src="img/poloHM.png" alt="">
-                        </div>
-                        <div class="col-sm-7">
-                            <h4>
-                                <a href="accessories.html" style="text-decoration: none; color: inherit;">
-                                    <i class="fa fa-truck service-icon"></i>Accessories
-                                </a>
-                            </h4>
-                            <p class="m-0">Cada accesorio es único y comparte colores acordé a cada personalidad. Experimenta utilizar un accesorio para cualquier actividad cotidiana y notarás la autenticidad al caminar</p>
-                        </div>
 
+                <!-- For Accessories -->
+                <div class="col-lg-6 mb-5">
+                    <div class="card">
+                        <div class="row align-items-center">
+                            <div class="col-sm-5">
+                                <img class="card-img-top img-fluid" src="img/poloHM.png" alt="">
+                            </div>
+                            <div class="card-body col-sm-7">
+                                <h4 class="card-title">
+                                    <a href="accessories.html" style="text-decoration: none; color: inherit;">
+                                        <i class="fa fa-truck service-icon"></i>Accessories
+                                    </a>
+                                </h4>
+                                <p class="card-text">Cada accesorio es único y comparte colores acordé a cada personalidad. Experimenta utilizar un accesorio para cualquier actividad cotidiana y notarás la autenticidad al caminar. <a href="accessories.html">VER MÁS...</a></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
     <!-- Service End -->
-
 
     <!-- Footer Start -->
     <div class="container-fluid footer text-white mt-5 pt-5 px-0 position-relative overlay-top">
@@ -184,7 +191,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">BOLETIN INFORMATIVO</h4>
-                <p>En "LiKaleas", estamos emocionadas de compartir contigo nuestras últimas novedades y eventos relacionados con nuestros productos</p>
+                <p>En "LiKalees", estamos emocionadas de compartir contigo nuestras últimas novedades y eventos relacionados con nuestros productos</p>
                 <div class="w-100">
                     <div class="input-group">
                         <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
