--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">BOLETIN INFORMATIVO</h4>
-                <p>En "LiKaleas", estamos emocionadas de compartir contigo nuestras últimas novedades y eventos relacionados con nuestros productos</p>
+                <p>En "LiKalees", estamos emocionadas de compartir contigo nuestras últimas novedades y eventos relacionados con nuestros productos</p>
                 <div class="w-100">
                     <div class="input-group">
                         <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
