--- a/caramelo.html
+++ b/caramelo.html
@@ -47,9 +47,9 @@
                     <a href="index.html" class="nav-item nav-link active" style="color:#964B00">Inicio</a>
                     <a href="about.html" class="nav-item nav-link " style="color:#964B00">Sobre Nosotros</a>
                     <a href="service.html" class="nav-item nav-link " style="color:#964B00">Catalogo</a>
-                    <a href="anuncios.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
-					<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
-					<a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
+                    <a href="events.html" class="nav-item nav-link " style="color:#964B00">Eventos</a>
+			<a href="promociones.html" class="nav-item nav-link " style="color:#964B00">Promociones</a>
+			<a href="refundPolicies.html" class="nav-item nav-link " style="color:#964B00">Politicas</a>
                     <a href="contact.html" class="nav-item nav-link  " style="color:#964B00">Contactanos</a>
                     <a href="carrito.html" id="cart-icon" class="nav-item nav-link" style="color:#964B00"><i class="fas fa-shopping-cart"></i></a>
                 </div>
