--- a/inicio.html
+++ b/inicio.html
@@ -76,13 +76,17 @@
                 <div class="carousel-item">
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image 2">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <!-- Contenido para la segunda imagen del carrusel -->
+                        <h2 class="text-primary font-weight-medium m-0">Sabor y energía que le da chispa a tu vida </h2>
+                        <h1 class="display-1 text-white m-0">ENERGIX</h1>
+                        <h2 class="text-white m-0">Desde 2023</h2>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="w-100" src="img/carousel-3.jpg" alt="Image 3">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <!-- Contenido para la tercera imagen del carrusel -->
+                        <h2 class="text-primary font-weight-medium m-0">Sabor y energía que le da chispa a tu vida </h2>
+                        <h1 class="display-1 text-white m-0">ENERGIX</h1>
+                        <h2 class="text-white m-0">Desde 2023</h2>
                     </div>
                 </div>
             </div>
