--- a/service.html
+++ b/service.html
@@ -31,6 +31,10 @@
         border: 3px; 
         color: white;
         }
+	.card {
+        border: 2px solid #555555;
+        box-shadow: 2px 2px 2px #222222;
+        }
     </style>
 </head>
 
